wwwroot/assets/css/style.css
/* ... */
.statisticContainer i {
    position: relative;
    top: 2px;
}

.rowItem {
    display: flex;
    flex-direction: row-reverse;
}

.statValue {
    color: #da2626;;
    font-weight: bold;
    /* margin-top: 5px; */
    margin: 0;
}

.theSideWithTheText h1 {
    margin: 0 30px 0 35px;
    font-size: 3.4vw;
    color: #d91414;
    letter-spacing: 0.04em;
    font-family: 'Trebuchet MS', sans-serif;
    /* border-bottom: solid 3.5px #4b4b4b; */
    /* text-shadow: 1px 1px #f42d2d; */
}

.introText {
    font-size: 25px;
    font-family: 'Courier New', monospace;
    margin: 0 5px 0;
    margin-left: 3.5%;
    /* background-color: #000000; */
    width: 875px;
    /* align-self: center; */
    text-align: left;
}

.belowStatistics {
    font-family: 'Courier New', monospace;
    display: flex;
    font-size: 20px;
    opacity: 0.5;
    margin-left: 4%;
    align-self: flex-start;
}

.belowStatistics p {
    margin: 0;
}

.theSideWithTheStats {
    font-family: 'Trebuchet MS', sans-serif;
    font-size: 35px;
    text-align: left;
    letter-spacing: 0.03em;
    /* margin: 20px 8% 0 2%; */
    /* border-radius: 5px; */
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
    padding: 25px;
    /* width: fit-content;
    height: fit-content; */
    background-image: linear-gradient(to bottom right, #2e2d2d, #2b2a2a);
    background-color: #2e2d2d;
    color: aliceblue;
}

/* .theStats p {
    margin: 10px 0 0;
} */

.alignRow {
    display: flex;
    flex-direction: row;
    align-items: flex-end;
    margin: 0;
}

.secondPElementInAlignrow {
    padding-left: 10px;
    letter-spacing: -0.001em;
}

.alignRow2 {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    margin-bottom: 10px;
    /* margin-left: 50%; */
}

.alignRow2 p {
    margin: 0 0 0 10px;
}



/* #memberStats,
#questionStats,
#answerStats {
    color: #811b0e;
} */

.boldCont {
    font-size: 45px;
    color: #811b0e;
    margin: 0;
}

.begoneMargin {
    margin: 0 0 6px;
}

.barka {
    display: flex;
    align-items: center;
    justify-content: center;
    background-image: linear-gradient(to bottom right, #d32828, #430101);
    border-top: 10px rgb(218, 218, 218) solid;
    height: 150px;
    width: 550px;
    rotate: 45deg;
    position: fixed;
    left: -180px;
    bottom: -70px;
    z-index: 5;
}

.barka button {
    color: aliceblue;
    font-size: 30px;
    rotate: -45deg;
    position: relative;
    bottom: 15px;
    right: 50px;
    border: none;
    height: 70px;
    width: 70px;
    border-radius: 50%;
    background-color: rgb(35, 27, 27);
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
}

#icon { 
    color: white;
    text-decoration: none;
}

#icon:hover {
    color: red;
    transition: all 0.3s;
}

.defaultInputBox {
    transition: all 0.3s;
    display: flex;
    flex-direction: column;
    border-radius: 4px;
    height: fit-content;
    border: solid rgb(168, 32, 32) 2px;
    margin-top: 170px;
    margin-bottom: 70px;
    width: 30%;
    padding: 20px;
    align-self: center;
    background-image: linear-gradient(to bottom right, rgb(14, 14, 14), rgb(11, 21, 31));
}

.defaultInputBox h1 {
    font-family: Arial, sans-serif;
    align-self: center;
    font-size: 50px;
    margin: 20px 0 0 0;
    width: 83%;
}

::placeholder {
    color: rgb(179, 227, 227);
    opacity: 0.5; /* Firefox */
  }

.defaultInputBox input {
    border: 3px solid rgb(58, 58, 58);
    background-color: rgb(87, 94, 100);
    padding: 5px;
    border-radius: 1px;
    margin-bottom: 20px;
    color: aliceblue;
    font-size: 20px;
    outline: none;
    width: 79%;
    align-self: center;
    transition: all 0.3s;
}

.defaultInputBox input:focus {
    border: 3px solid rgb(210, 210, 210);
    transition: all 0.2s;
}

.defaultInputBox label {
    font-family: 'Trebuchet MS', sans-serif;
    margin-bottom: 7px;
    letter-spacing: 0.05em;
    width: 80%;
    align-self: center;
}

.defaultInputBox textarea {
    font-family: 'Trebuchet MS', sans-serif;
    margin-bottom: 7px;
    letter-spacing: 0.05em;
    width: 80%;
    align-self: center;    
    border: 3px solid rgb(58, 58, 58);
    background-color: rgb(87, 94, 100);
}

.defaultMessageInputBox {
    transition: all 0.3s;
    display: flex;
    flex-direction: column;
    border-radius: 4px;
    height: 600px;
    border: solid rgb(168, 32, 32) 2px;
    margin-top: 170px;
    margin-bottom: 70px;
    width: 50%;
    padding: 20px;
    background-image: linear-gradient(to bottom right, rgb(14, 14, 14), rgb(11, 21, 31));
}

.defaultMessageInputBox h1 {
    font-family: Arial, sans-serif;
    align-self: center;
    font-size: 50px;
    margin: 0;
}

.defaultMessageInputBox input {
    border: 3px solid rgb(58, 58, 58);
    background-color: rgb(87, 94, 100);
    padding: 5px;
    border-radius: 1px;
    margin-bottom: 20px;
    color: aliceblue;
    font-size: 20px;
    outline: none;
    width: 79%;
    align-self: center;
    transition: all 0.3s;
}

.defaultMessageInputBox input:focus {
    border: 3px solid rgb(210, 210, 210);
    transition: all 0.2s;
}

.defaultMessageInputBox label {
    font-family: 'Trebuchet MS', sans-serif;
    margin-bottom: 7px;
    letter-spacing: 0.05em;
    width: 80%;
    align-self: center;
}

.defaultMessageInputBox textarea {
    font-family: 'Trebuchet MS', sans-serif;
    margin-bottom: 7px;
    letter-spacing: 0.05em;
    width: 80%;
    align-self: center;    
    border: 3px solid rgb(58, 58, 58);
    background-color: rgb(87, 94, 100);
}

.hideBttn {
    cursor: pointer;
    align-self: center;
    margin-right: 7px;
    display: none;
}
.unHideBttn {
    cursor: pointer;
    align-self: center;
    margin-right: 7px;
}

#eyeSymbol:hover {
    color: rgb(208, 208, 208);
    transition: all 0.2s;
}
/* ... */

